# extractor

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  tasks.py
extractor/: __init__.py
extractor/airtable/: __init__.py
extractor/config/: __init__.py  settings.toml
extractor/drive/: download.py
extractor/loader/: __init__.py
extractor/nfe/: __init__.py
extractor/nfe/output/: _
extractor/tutorials/: v2.py  v4.py
extractor/tutorials/files/: __init__.py  nfe.xml
extractor/tutorials/marvin/: ai_applications.py  ai_classifier.py  ai_functions.py  ai_model.py  download_folder.py
extractor/utils/: __init__.py  decorators.py  llm.py
